[tool.poetry]
name = "client_cloudpayments"
version = "0.1.0"
description = ""
authors = ["Maksimyuk <georgiy.maksimyuk@flatstack.dev>"]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.1"
pytest = "^7.1.3"
marshmallow = "^3.17.1"
marshmallow-enum = "^1.5.1"
pytest-asyncio = "^0.19.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
